--- a/n2n-happyn/files/happynet.config
+++ b/n2n-happyn/files/happynet.config
@@ -11,6 +11,8 @@ config edge
 	option key        'password'
 	option route      '1'
 	option masquerade '0'
+	option compress '1'
+	option select_rtt '1'
 
 config supernode
 	option enabled    '0'
